fix copyright gap

--- a/src/css/components/footer.css
+++ b/src/css/components/footer.css
@@ -1,5 +1,3 @@
-@import url(../base/variables.css);
-
 .footer {
   background-color: rgba(var(--cl-black), 1);
   color: rgba(var(--cl-lighthouse), 1);
@@ -32,7 +30,7 @@
 @media only screen and (min-width: 768px) {
   .footer-container {
     background-color: rgba(var(--cl-black), 1);
-    padding: 64px 32px 6px 32px;
+    padding: 64px 32px 16px 32px;
     max-width: 768px;
   }
 }
@@ -273,6 +271,7 @@
     font-weight: 400;
     line-height: 128%;
     letter-spacing: -0.02em;
+    gap: 0;
   }
 }
 /* desktop */
